# MetaGen

./: .gitignore  .readthedocs.yaml  README.md  general-requirements.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.circleci/: config.yml
cvoa/: __init__.py  __main__.py  cli.py  core.py  individual.py  support.py
docs/source/: aliases.rst  api.rst  conf.py  current_metaheuristics.csv  cvoa_use_case.rst  index.rst  use_cases.rst
notebooks/: Tabu.ipynb  duc_ga.ipynb  duc_rs.ipynb  suc_p1.ipynb  suc_p2.ipynb  suc_p3.ipynb  suc_p4.ipynb
src/entrypoint/: __main__.py  cli.py
src/metagen/: __init__.py
src/pycvoa/: __init__.py  __main__.py  cli.py  core.py  cvoa.py  definition.py  individual.py  support.py  types.py
src/use_cases/: __main__.py  cli.py  dispatcher.py  dummy.py  ml.py  simple.py
test/: __init__.py  cli_test  domain_test.py  machine_learning_problems.py  pre_defined_problems.py  simple_problems.py  sklearn_problems.py  test.py  test_1.py  test_2.py  test_3.py  use_case.py  use_cases.py  utils.py
test/alterations/: __init__.py  alteration_test.py
test/benchmark/: experiment.py  experimentation.ipynb  experimentation_ml.ipynb  functions.py
test/cvoa_test/: cvoa_testing.py  distributed_cvoa_testing.py  local_cvoa_testing.py
test/distributed/: cvoa_test.py  ga_test.py  mm_test.py  random_search_test.py  rs_test.py  sa_test.py  ssga_test.py  ts_test.py
test/domains/: basics.py  checking_values_global_method.py  checking_values_specific_methods.py  defining_variables.py  domain_test.py  getting_definitions.py
test/framework/: alteration.py  solution.py  utils.py
test/framework_test/: alteration_test.py  domain.py  domain_test.py  solution_test.py
test/metaheuristics/: dispatcher.py  dummy_examples.py  problems_test.py  tests.py  tf_examples.py
test/metaheuristics_test/: metaheuristic_factory.py  unit_test.py  unit_tests.py
test/problems/: dispatcher.py  dummy_examples.py  ml_examples.py  problems_test.py  simple_examples.py  tf_examples.py
test/resources/: examples.csv  examples_ga.csv  ga_parameters.csv  layer_integer_test.csv  metaheuristic_parameters.csv  mm_parameters.csv  positive.csv  rs_parameters.csv  sa_parameters.csv  tpe_parameters.csv  ts_parameters.csv  (+1 more)
test/solutions/: basics.py  (+7 more)
(+201 files in other folders)
