[metadata]
name = pycvoa-datalabupo
version = 0.0.1
author = Data Science & Big Data Rerearch Lab
author_email = datalab@upo.es
description = A Python Package for Hyperparameter Tuning in Machine and Deep Learning Models Based on the Coronavirus Optimization Algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataLabUPO/PyCVOA
project_urls =
    Bug Tracker = https://github.com/DataLabUPO/PyCVOA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src