[metadata]
name = pymetagen-datalabupo
version = 0.1.1
author = Data Science & Big Data Rerearch Lab
author_email = datalab@upo.es
description = A Python Package problem optimization.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataLabUPO/MetaGen
project_urls =
    Bug Tracker = https://github.com/DataLabUPO/MetaGen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True